Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120628

TableView: cannot select cells when using mouse press + shift

XMLWordPrintable

    • aecb62403 (dev), 4214d705a (6.7), 4335010a8 (dev), 2c823811a (6.6), 43ebd2512 (6.7), a63c69104 (6.6)

      If you first click on a cell in TableView, then later shift-click on another cell, nothing will happen. Expected behaviour is that you select the cells between the first click and the second.

        For Gerrit Dashboard: QTBUG-120628
        # Subject Branch Project Status CR V

            richard Richard Moe Gustavsen
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: